@@ -12,6 +12,7 @@
 @prefix lv2state: <http://lv2plug.in/ns/ext/state#> .
 @prefix lv2patch: <http://lv2plug.in/ns/ext/patch#> .
 @prefix lv2worker: <http://lv2plug.in/ns/ext/worker#> .
+@prefix lv2resize: <http://lv2plug.in/ns/ext/resize-port#> .
 @prefix lv2pg:   <http://lv2plug.in/ns/ext/port-groups#> .
 
 @prefix drumkv1_lv2: <http://drumkv1.sourceforge.net/lv2#> .
@@ -49,6 +50,7 @@
 		lv2atom:bufferType lv2atom:Sequence ;
 		lv2atom:supports lv2patch:Message ;
 		lv2:designation lv2:control ;
+		lv2resize:minimumSize 4096 ;
 		lv2:index 1 ;
 		lv2:symbol "notify";
 		lv2:name "Notify";
