@@ -180,8 +180,10 @@ void drumkv1_programs::process_program (
 	m_bank = find_bank(bank_id);
 	m_prog = (m_bank ? m_bank->find_prog(prog_id) : nullptr);
 
-	if (m_prog)
+	if (m_prog) {
 		drumkv1_param::loadPreset(pDrumk, m_prog->name());
+		pDrumk->updateParams();
+	}
 }
 
 
